--- a/src/styles/components/InputButton.module.css
+++ b/src/styles/components/InputButton.module.css
@@ -10,6 +10,7 @@
     margin-top: 20px;
 }
 .input{
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     width: 100%;
     height: 30px;
