--- a/src/styles/components/InputIcon.module.css
+++ b/src/styles/components/InputIcon.module.css
@@ -9,6 +9,7 @@
     border-radius: 50px;
 }
 .input{
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     width: 100%;
     height: 30px;
